fixed alignment content for new items

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button:disabled {
  border-radius: 8px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  display: grid;
- grid-template-rows: auto auto 1fr 1fr;
+ grid-template-rows: auto 3fr 1fr 1fr;
  grid-template-areas: 
  "title" 
  "description" 
@@ -88,6 +88,15 @@ button:disabled {
  position: relative;
 }
 
+.news-date {
+ grid-area: date;
+ align-self: end;
+ margin-top: 10px;
+ color: #777;
+ font-size: 0.9rem;
+ text-align: right;
+}
+
 
 
 /* display overflow title when hovering */
@@ -101,10 +110,15 @@ button:disabled {
 
 .news-description {
  grid-area: description;
+ height: 100px;
+ overflow: hidden;
+ text-overflow: ellipsis;
+ display: -webkit-box;
 }
 
 .news-source {
  grid-area: source;
+ align-self: end;
 }
 
 .news-item p {
